# tg-practice-companion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: coding-patterns.md  orchestration.md  settings.json  testing-guide.md
.claude/agents/: coder.md  pr-reviewer.md  product-manager.md
.claude/commands/: implement-task.md
.github/ISSUE_TEMPLATE/: agent-task.md
.github/workflows/: ci.yml  claude-chain-driver.yml  claude-issue.yml  claude-pm-triage.yml  claude-pr-fix.yml  claude-pr-merge.yml  claude-pr-product-fix.yml  claude-pr-product-review.yml  claude-pr-resume.yml  claude-pr-review.yml  claude-sweeper.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_practice_engine.py  0003_journal.py  0004_morning_and_usage.py  0005_user_blessing_date.py  0006_lists.py  0007_want_practice_type.py  0008_good_deeds_practice_type.py  0009_motivational_image_practice_type.py  0010_per_user_content.py  0011_media_asset_original_filename.py  0012_video_practice_type.py
bot/: __init__.py  __main__.py  bot.py  config.py  db.py  exceptions.py  i18n.py  scheduler.py
bot/handlers/: __init__.py  admin.py  assessment.py  commands.py  good_deeds.py  journal.py  reports.py  skip_day.py  timezone_setup.py  want_list.py
bot/middlewares/: __init__.py  auth.py  dependency.py
bot/models/: __init__.py  base.py  journal.py  lists.py  morning.py  practice.py  user.py
bot/repositories/: __init__.py  analysis_repository.py  api_usage_repository.py  blessing_repository.py  good_deed_repository.py  image_repository.py  journal_repository.py  media_asset_repository.py  pending_prompt_repository.py  practice_repository.py  practice_send_repository.py  self_assessment_repository.py  user_repository.py  want_list_repository.py
bot/services/: __init__.py  analysis_service.py  assessment_service.py  blessing_admin_service.py  blessing_service.py  delivery_service.py  good_deed_service.py  journal_service.py  llm_client.py  media_service.py  (+11 more)
cli/: __init__.py  seed.py
content/: audio.example.yaml  blessings.example.yaml  images.example.yaml  practices.example.yaml
docs/: architecture.md  operations.md  user_guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
scripts/: check_coverage.py  deploy.sh
tests/: conftest.py  test_docker_compose.py  test_seed_cli.py  test_web_compose.py
web/: __init__.py  auth.py  dependencies.py  main.py
(+120 files in other folders)
